--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "contentful": "^7.14.5",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
