--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "contentful": "^7.14.5",
+    "contentful-import": "^7.8.7",
+    "dotenv": "^8.2.0",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
