--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "contentful-import": "^7.8.7",
     "dotenv": "^8.2.0",
     "next": "^9.4.4",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1"
